--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 .App {
   text-align: center;
 }
+.particle-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -3; /* Make sure it's behind the main content */
+}
 
 .App-logo {
   height: 40vmin;
